--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,49 @@ section.contact-form button:hover {
     margin-top: auto;
 }
 
+/* Hamburger Menu */
+.hamburger-menu {
+    display: none;
+    cursor: pointer;
+    padding: 15px;
+}
+
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    
+}
+
+.navbar ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+
+
+.navbar ul.show {
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+}
+
+.navbar ul.show li {
+    display: block;
+    text-align: center;
+    margin: 0;
+}
+
 /* Small screen device */
 
 @media only screen and (max-width: 768px) {
@@ -351,4 +394,32 @@ section.contact-form button:hover {
         text-align: center;
         margin-top: auto;
     }
+
+     
+    .hamburger-menu {
+        display: block;
+    }
+
+    
+    .navbar ul {
+        display: none;
+    }
+
+    
+    .navbar ul.show {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: static;
+        background-color: #463832;
+        text-align: center;
+        
+    }
+
+    .navbar ul li {
+        display: none;
+    }
+
+    
 }
